--- a/_config.yml
+++ b/_config.yml
@@ -69,11 +69,11 @@ param:
         # GnuPG kısa parmak izi (ör. DEADBEEF)
         gpg: ~
         # twitter adresi (ör. http://19.status.net/roktas)
-        twitter: ~ 
+        twitter: https://twitter.com/El_ifGul_
         # flick adresi (ör. http://flickr.com/photos/roktas)
         flickr: ~
         # facebook adresi (ör. http://facebook.com/roktas)
-        facebook: ~
+        facebook: https://www.facebook.com/elf.gul
         # özet akışı adresi (ör. http://feeds.feedburner.com/roktas)
         feed: ~
 
