--- a/_config.yml
+++ b/_config.yml
@@ -107,4 +107,4 @@ param:
         # sayfa yorumları için disqus site kaydı (ör. roktas)
         disqus: elifgul
         # GitHub şerit metni (ör. GitHub'dayım)
-        ribbon: Özgürlüğe adım adım...
+        ribbon: GitHub'dayım...
